# cozy-kit

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yml
cozy_kit/: __init__.py  cli.py  core.py  cozy_ui.py  data.py  details.py  errors.py  greeting.py  mailer.py  settings.py  text_studio.py  timer.py  ui.py  updater.py
cozy_kit/_internal/: cli_doctor.py  errors.py  json_manager.py
cozy_kit/_internal/helpers/: greeting_helpers.py  smtp_helpers.py  text_helpers.py  time_helpers.py
cozy_kit/jsons/: bedtime_stories.json
cozy_kit/resources/: bedtime_stories.json  evenings.json  holidays.json
docs/: demos.md  greeting_class.md  summary.md  textstudio_class.md  timer_class.md
