[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cozy-kit"
version = "1.0.3"
description = "A cozy collection of utilities and tools for Python"
readme = "README.md"
authors = [
  { name="Youssef Ahmed", email="youssef.ahmed.29062017@gmail.com"}
]
maintainers = [
    { name="Youssef Ahmed", email="youssef.ahmed.29062017@gmail.com"}
]

license = { text = "MIT" }
requires-python = ">=3.8"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
  "plyer",
  "requests"
]

keywords = [
    "python",
    "utillities",
    "timers",
    "toolkit",
    "terminal"
]

[project.urls]
Homepage = "https://cozykit-home.vercel.app"
Documentation = "https://cozy-docs.vercel.app"
GitHub = "https://github.com/youssefahmed2017/cozy-kit"
Issues = "https://github.com/youssefahmed2017/cozy-kit/issues"

[project.scripts]
cozy-kit = "cozy_kit.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["cozy_kit"]

[tool.setuptools.package-data]
cozy_kit = ["resources/*.json"]
